--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 	
+	<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+	<link rel="manifest" href="ico/site.webmanifest">
+	<link rel="mask-icon" href="ico/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="ico/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="ico/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<style>
@@ -168,6 +178,35 @@
 			  </style>
 			  
 			 <script>
+			 window.addEventListener('load', function() {
+			   let deferredPrompt;
+			 
+			   window.addEventListener('beforeinstallprompt', function(event) {
+				 event.preventDefault();
+				 deferredPrompt = event;
+				 // Update UI notify the user they can add to home screen
+				 const btnAdd = document.createElement('button');
+				 btnAdd.style.display = 'block';
+				 btnAdd.style.position = 'fixed';
+				 btnAdd.style.bottom = '10px';
+				 btnAdd.style.left = '50%';
+				 btnAdd.style.transform = 'translateX(-50%)';
+				 btnAdd.innerText = 'Add to home screen';
+				 btnAdd.addEventListener('click', (event) => {
+				   deferredPrompt.prompt();
+				   deferredPrompt.userChoice.then((choiceResult) => {
+					 if (choiceResult.outcome === 'accepted') {
+					   console.log('User accepted the A2HS prompt');
+					 } else {
+					   console.log('User dismissed the A2HS prompt');
+					 }
+					 deferredPrompt = null;
+				   });
+				 });
+				 document.body.appendChild(btnAdd);
+			   });
+			 });
+			
 				 function playSound(soundId) {
 					 var sound = document.getElementById(soundId);
 					 sound.play();
