--- a/index.html
+++ b/index.html
@@ -232,6 +232,6 @@
 	<div class="tile" onclick="playSound('sound7')">Tady máš káves</div>
 	<audio id="sound7" src="mp3/tady_mas_kaves.mp3"></audio>
 	<div class="tile" onclick="playSound('sound8')">Kurvaaa!!!</div>
-	<audio id="sound8" src="mp3/tady_mas_kaves.mp3"></audio>
+	<audio id="sound8" src="mp3/kurva.mp3"></audio>
 	</div>
 </body></html>
