--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		
 		.tile {
 			background-color: #1f1f1f;
-			font-family: 'Amatic SC', cursive;
+			font-family: 'Amatic SC', sans-serif;
 			width: 23%;
 			height: 200px;
 			display: flex;
